tests/inc/out.txt
error: mismatched types: int vs string
  ┌─ inp.sml:3:9
  │
3 │ val _ = inc "nope"
  │         ^^^^^^^^^^

